# multipackage_example

./: README.md  pyproject.toml
src/english/: base.py
src/german/: base.py
src/spanish/: base.py
